- hide header on body scroll. - prevent horizontal scrollbar on body. - updated "text-color-split" mixin. - header copy update. - footer links style update.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -20,6 +20,7 @@ body {
   font-size: 1rem;
   line-height: 1.2rem;
   margin: 0;
+  overflow-x: hidden;
 }
 
 main {
@@ -37,17 +38,17 @@ h3 {
 
 h1 {
   font-size: 3.6rem;
-  line-height: 3.4rem;
+  line-height: 3.8rem;
 }
 
 h2 {
   font-size: 2.8rem;
-  line-height: 2.3rem;
+  line-height: 3rem;
 }
 
 h3 {
   font-size: 2rem;
-  line-height: 1.5rem;
+  line-height: 2.2rem;
 }
 
 a {
